--- a/styles/style.css
+++ b/styles/style.css
@@ -200,6 +200,40 @@ body {
     height: 100%;
     width: 100%;
 }
+/* css contacto */
+.formContacto {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Oswald', sans-serif;
+    color: white;
+    
+}
+.cajaFormulario {
+    width: 50%;
+    height: 90%;
+    border-radius: 2em;
+    background-color: rgba(42, 42, 35, 0.562);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.formulario {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    gap: 0.3em;
+}
+.cajaFormulario h1 {
+    font-size: 3em;
+
+}
 /* footer */
 
 footer {
