--- a/styles/style.css
+++ b/styles/style.css
@@ -207,12 +207,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 4%;
     font-family: 'Oswald', sans-serif;
     color: white;
     
 }
 .cajaFormulario {
-    width: 50%;
+    width: 40%;
     height: 90%;
     border-radius: 2em;
     background-color: rgba(42, 42, 35, 0.562);
@@ -230,10 +231,42 @@ body {
     height: auto;
     gap: 0.3em;
 }
+.formulario .respuesta{
+    width: 80%;
+}
 .cajaFormulario h1 {
     font-size: 3em;
-
 }
+.botonConsulta {
+    width: 80%;
+    background-color: #00000070;
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    color: white;
+    transition: all 400ms;
+}
+.botonConsulta:hover {
+    background-color: rgba(240, 248, 255, 0.555);
+}
+.redes {
+    width: 20%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3%;
+    background-color: rgba(42, 42, 35, 0.562);
+    border-radius: 2em;
+}
+.redes h2 {
+    font-size: 1em;
+    text-align: center;
+}
+.icon {
+    width: 80px;
+    height: 80px;
+}   
 /* footer */
 
 footer {
