--- a/styles/style.css
+++ b/styles/style.css
@@ -17,14 +17,18 @@ footer {
     grid-area: footer;
 }
 
+html {
+    width: 100%;
+    height: 100%;
+}
 body {
     display: grid;
     background-image: url(../img/fondo.avif);
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
     background-attachment: fixed;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     grid-template-columns: 0.5fr auto 0.5fr;
     grid-template-rows: 50px auto 40px;
     grid-template-areas: 
@@ -110,69 +114,62 @@ body {
     text-shadow: 0px 0px 10px black;
 }
 /* Css History   */
+.tituloHabitaciones {
+    grid-area: tituloH;
+}
+.cocina {
+    grid-area: cocina
+}
+.baño {
+    grid-area: baño;
+}
+.habitacionPrincipal {
+    grid-area: principal;
+}
+.habitacionA {
+    grid-area: hA;
+}
+.habitacionB {
+    grid-area: hB;
+}
+.mainHistory {
+    width: 100%;
+    height: 100%;
+}
 .habitaciones {
+    height: 100%;
+    width: 100%;
     grid-area: habitaciones;
     font-family: 'Oswald', sans-serif;
-
-}
-.mainHistory{
-    height: 100%;
-    width: 100%;
-    overflow:hidden;
-}
-.habitaciones {
-    width: 100vw;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 30px;
+    display: grid;
+    grid-template-areas: 
+    "tituloH tituloH tituloH tituloH tituloH"
+    "cocina principal hA hB baño"
+    ;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 0.3fr 1fr;
+    justify-items: center;
     align-items: center;
     color: white;
-    overflow: hidden;
+    text-transform: uppercase;
 }
 .habitacion {
+    width: 80%;
+    height: 80%;
+    background-color: rgba(82, 76, 76, 0.584);
     display: flex;
-    height: 300px;
-    width: 200px;
-    background-color: rgba(128, 128, 128, 0.5);
-    border-radius: 20px;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    transition: all 2s;
-}
-.iconosHabitaciones {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
     align-items: center;
-    width: 100%;
-}
-.habitacion img {
-    width: 150px;
-    height: 200px;
-    transition: all 2s;
-}
-.iconosHabitaciones  h2 {
-    font-size: 20px;
-}
-.habitacion h3 {
-    font-size: 15px;
-    transition: all 3s;
+    border-radius: 15%;
+
 }
 
-.habitacion:hover {
-    height: 350px;
-    width: 300px;
+.habitaciones img {
+    width: 80%;
+    height: 60%;
 }
-.habitacion:hover img{
-    width: 250px;
-    height: 250px;
-}
-.habitacion:hover h3 {
-    font-size: 20px;
-}
+
 /* css como llegar */
 .ubicacion {
     width: 100%;
