--- a/styles/style.css
+++ b/styles/style.css
@@ -274,3 +274,18 @@ footer {
     display: block;
     bottom: 0;
 }
+
+@media screen and (max-width: 768px) {
+    .titulo {
+        font-size: 2.5em;
+    }
+    body {
+        grid-template-rows: 100px 100% 40px;
+    }
+    .barraNavegacion ul {
+        height: 100px;
+        grid-template-areas: 
+        ". . logo logo logo logo logo . ."
+        ". . b1 b2 b3 b4 b5 . .";
+    }
+}
