--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ body {
     display: grid;
     background-image: url(../img/fondo.avif);
     background-repeat: no-repeat;
-    background-size: 100vw 100vh;
+    background-size: 100% 100%;
     background-attachment: fixed;
     width: 100%;
     height: 100%;
@@ -98,7 +98,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
 }
-.img-titulo img{
+.imgTitulo img{
     width: 40vw;
     box-shadow: 0px 0px 50px black;
     }
@@ -134,12 +134,11 @@ body {
 }
 .mainHistory {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 }
 .habitaciones {
     height: 100%;
     width: 100%;
-    grid-area: habitaciones;
     font-family: 'Oswald', sans-serif;
     display: grid;
     grid-template-areas: 
@@ -271,10 +270,23 @@ body {
 footer {
     background-color: black;
     width: 100%;
-    display: block;
     bottom: 0;
 }
-
+@media screen and (max-width: 992px) {
+    .presentacion {
+        flex-direction: column;
+    }
+    .imgTitulo {
+        display: flex;
+        justify-content: center;
+    }
+    .imgTitulo img {
+        width: 80%;
+    }
+    .titulo {
+        font-size: 3em;
+    }
+}
 @media screen and (max-width: 768px) {
     .titulo {
         font-size: 2.5em;
@@ -285,7 +297,25 @@ footer {
     .barraNavegacion ul {
         height: 100px;
         grid-template-areas: 
-        ". . logo logo logo logo logo . ."
+        "logo logo logo logo logo logo logo logo logo"
         ". . b1 b2 b3 b4 b5 . .";
+    }
+    .rooms {
+        height: auto;
+    }
+    .habitaciones {
+        grid-template-areas: 
+        "tituloH"
+        "cocina"
+        "principal"
+        "hA"
+        "hB"
+        "baño"
+        ;
+        grid-template-columns: auto;
+        grid-template-rows: 0.3fr repeat(5, 1fr);
+    }
+    .habitacion {
+        height: 90%;
     }
 }
