--- a/styles/style.css
+++ b/styles/style.css
@@ -318,4 +318,21 @@ footer {
     .habitacion {
         height: 90%;
     }
+    .formContacto { 
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .cajaFormulario {
+        width: 80%;
+        height: 60%;
+    }
+    .redes {
+        flex-direction: row;
+        height: 20%;
+        width: 80%;
+    }
+    .icon {
+        width: 40px;
+        height: 40px;
+    }
 }
