--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ body {
     width: 100%;
 }
 .presentacion {
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -144,6 +144,7 @@ body {
 .mapa {
     width: 80%;
     height: 70%;
+    margin-bottom: 1em;
 }
 .mapa iframe {
     height: 100%;
@@ -238,9 +239,6 @@ footer {
    body {
     grid-template-rows: auto 4fr auto;
    }
-   /* .mainIndex {
-    position: absolute;
-   } */
 
    .navbar {
     height: auto;
@@ -248,6 +246,7 @@ footer {
     /* modificacion al index */
     .presentacion {
         flex-direction: column;
+        justify-content: space-around;
     }
     .imgTitulo {
         display: flex;
@@ -255,7 +254,7 @@ footer {
     }
     .imgTitulo img {
         width: 70%;
-        height: auto;
+        margin: 1em 0;
     }
     .tamaño-titulo {
         font-size: 3em;
@@ -273,8 +272,6 @@ footer {
     .tamaño-titulo {
         font-size: 2.5em;
     }
-    /* modificacion al page rooms */
-    
     /* Modificacion al page contact */
     .formContacto { 
         flex-direction: column;
