--- a/styles/style.css
+++ b/styles/style.css
@@ -62,7 +62,7 @@ body {
     background-color: rgba(0, 0, 0, 0.445);
 }
 /* css index */
-.mainIndex {
+.main-index {
     height: 100%;
     width: 100%;
 }
@@ -74,7 +74,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
 }
-.imgTitulo img{
+.img-titulo img{
     width: 40vw;
     box-shadow: 0px 0px 50px black;
     }
@@ -243,11 +243,11 @@ footer {
         flex-direction: column;
         justify-content: space-around;
     }
-    .imgTitulo {
+    .img-titulo {
         display: flex;
         justify-content: center;
     }
-    .imgTitulo img {
+    .img-titulo img {
         width: 70%;
         margin: 1em 0;
     }
@@ -286,4 +286,16 @@ footer {
         width: 40px;
         height: 40px;
     }
+}
+@media screen and (max-width:576px) {
+    .tamaño-titulo {
+        font-size: 3em;
+    }
+    .img-titulo img {
+    width: 90%;
+ }
+ /* modificacion a location */
+ .ubicacion-texto p {
+    font-size: 1em;
+ }
 }
