--- a/styles/style.css
+++ b/styles/style.css
@@ -152,7 +152,7 @@ body {
     width: 100%;
 }
 /* css contacto */
-.formContacto {
+.form-contacto {
     height: 100%;
     width: 100%;
     display: flex;
@@ -163,7 +163,7 @@ body {
     color: white;
     
 }
-.cajaFormulario {
+.caja-formulario {
     width: 40%;
     height: 90%;
     border-radius: 2em;
@@ -185,10 +185,10 @@ body {
 .formulario .respuesta{
     width: 80%;
 }
-.tituloContacto {
+.titulo-contacto {
     font-size: 2.5em;
 }
-.botonConsulta {
+.boton-consulta {
     width: 80%;
     background-color: #00000070;
     font-family: 'Oswald', sans-serif;
@@ -196,7 +196,7 @@ body {
     color: white;
     transition: all 400ms;
 }
-.botonConsulta:hover {
+.boton-consulta:hover {
     background-color: rgba(240, 248, 255, 0.555);
 }
 .redes {
@@ -223,9 +223,18 @@ body {
 /* footer */
 
 footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
     background-color: black;
+    flex-wrap: wrap;
     width: 100%;
     height: 40px;
+}
+.contenido-footer {
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.527);
+    font-size: 0.8em;
 }
 
 /* Comienzo de las medias para generar el responsive */
@@ -268,12 +277,12 @@ footer {
         font-size: 2.5em;
     }
     /* Modificacion al page contact */
-    .formContacto { 
+    .form-contacto { 
         flex-direction: column;
         justify-content: space-evenly;
         gap: 0;
     }
-    .cajaFormulario {
+    .caja-formulario {
         width: 80%;
         height: 70%;
     }
