--- a/styles/style.css
+++ b/styles/style.css
@@ -67,11 +67,20 @@ html body {
 }
 
 /*css index*/
-.main-index {
+.body-index {
+  height: 210%;
+  width: 100%;
+  grid-template-columns: 4fr;
+  grid-template-rows: auto 4fr 100vh auto;
+  grid-template-areas: "nav nav nav" "main main main" "main main main" "footer footer footer";
+}
+.body-index .main-index {
   height: 100%;
   width: 100%;
+  display: grid;
+  grid-template-rows: 4fr 100vh;
 }
-.main-index .presentacion {
+.body-index .main-index .presentacion {
   height: 100%;
   width: 100%;
   display: flex;
@@ -79,11 +88,11 @@ html body {
   justify-content: space-evenly;
   align-items: center;
 }
-.main-index .presentacion .img-titulo img {
+.body-index .main-index .presentacion .img-titulo img {
   width: 40vw;
   box-shadow: 0px 0px 50px black;
 }
-.main-index .presentacion .titulo {
+.body-index .main-index .presentacion .titulo {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -93,8 +102,32 @@ html body {
   color: white;
   text-shadow: 0px 0px 10px black;
 }
-.main-index .presentacion .titulo .tamaño-titulo {
+.body-index .main-index .presentacion .titulo .tamaño-titulo {
   font-size: 3.5em;
+}
+.body-index .main-index .actividades {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #4a2525;
+}
+.body-index .main-index .actividades h3 {
+  font-weight: 700;
+  color: white;
+  margin-top: 1em;
+  text-transform: uppercase;
+}
+.body-index .main-index .actividades .contenido-actividades {
+  height: 100%;
+  gap: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.body-index .main-index .actividades .contenido-actividades .card {
+  width: 22%;
+  height: 90%;
 }
 
 /*Css History*/
