--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,20 +1,29 @@
 /*css index*/
+.presentacion {
+    grid-area: pre;
+}
+.actividades {
+    grid-area: act;
+}
 .body-index {
     height: 210%;
     width: 100%;
     grid-template-columns: 4fr;
-    grid-template-rows: auto 4fr 100vh auto;
-    grid-template-areas: 
-    "nav nav nav"
-    "main main main"
-    "main main main"
-    "footer footer footer";
+    grid-template-rows: auto 4fr 4fr auto;
+    grid-template-areas:
+        "nav nav nav"
+        "main main main"
+        "main main main"
+        "footer footer footer";
 
     .main-index {
         height: 100%;
         width: 100%;
         display: grid;
-        grid-template-rows: 4fr 100vh;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: 
+        "pre"
+        "act";
 
 
         .presentacion {
@@ -45,29 +54,36 @@
                 }
             }
         }
+
         .actividades {
             display: flex;
             flex-direction: column;
             align-items: center;
             background-color: #4a2525;
-                h3 {
-                    font-weight: 700;
-                    color: white;
-                    margin-top: 1em;
-                    text-transform: uppercase;
-                }
-                .contenido-actividades {
+            height: 100%;
+            h3 {
+                text-align: center;
+                font-weight: 700;
+                color: white;
+                margin-top: 1em;
+                text-transform: uppercase;
+            }
+
+            .contenido-actividades {
+                height: 90%;
+                gap: 1em;
+                display: grid;
+                grid-template-columns: repeat(4,1fr);
+                justify-items: center;
+                flex-wrap: wrap;
+                padding: 1em 0 1em 0em;
+
+                .card {
+                    width: 95%;
                     height: 100%;
-                    gap: 1em;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    flex-wrap: wrap;
-                        .card {
-                            width: 22%;
-                            height: 90%;
-                        }
                 }
+            }
         }
     }
 }
+
