--- a/scss/_media_querys.scss
+++ b/scss/_media_querys.scss
@@ -10,10 +10,15 @@
     }
     /* modificacion al index */
     .body-index{
-        grid-template-rows: auto 8fr auto;
+        height: 330%;
+        grid-template-rows: auto 4fr 4fr auto;
 
         .main-index{
-
+            grid-template-rows: repeat(3,1fr);
+            grid-template-areas: 
+            "pre"
+            "act"
+            "act";
     
             .presentacion {
                 flex-direction: column;
@@ -32,6 +37,17 @@
                         font-size: 3em;
                     }
             }
+            .actividades {
+                justify-content: space-evenly;
+                .contenido-actividades {
+                    grid-template-columns: 1fr 1fr;
+                    grid-template-rows: 1fr 1fr;
+                    overflow: hidden;
+                    .card {
+                            height: auto;
+                        }
+                }
+            }
         }
     }
 
@@ -49,9 +65,17 @@
 
 @media screen and (max-width:768px) {
        /* nueva modificacion al index */
-       .tamaño-titulo {
-        font-size: 2.5em;
+.body-index {
+    .main-index {
+        .presentacion {
+            .titulo {
+                .tamaño-titulo {
+                    font-size: 3em;
+                }
+            }
+        }
     }
+}
 
      /* Modificacion al page contact */
      .form-contacto { 
@@ -77,6 +101,36 @@
 /*media para 576px*/ 
 
 @media screen and (max-width:576px) {
+
+.body-index {
+    height: 530%;
+    .main-index {
+        grid-template-rows: repeat(5,1fr);
+        grid-template-areas:
+        "pre"
+        "act"
+        "act"
+        "act"
+        "act";
+            .presentacion {
+                .img-titulo {
+                    img {
+                        width: 90%;
+                    }
+                }
+            }
+        .actividades {
+            .contenido-actividades {
+                grid-template-columns: 1fr;
+                grid-template-rows: repeat(4,1fr);
+                overflow: hidden;
+                .card {
+                        height: auto;
+                    }
+            }
+        }
+    }
+}
     .tamaño-titulo {
         font-size: 2.5em;
         text-align: center;
