--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -20,7 +20,7 @@
             justify-content: space-evenly;
 
                 .titulo-contacto {
-                    font-size: 2.5em;
+                    @include titulo (2.5em,500,center,white);
                 }
 
                 .formulario {
@@ -62,8 +62,7 @@
             border-radius: 2em;
 
                 h2 {
-                    font-size: 1.5em;
-                    text-align: center;
+                    @include titulo (1.5em,500,center,white);
                 }
 
                 a {
