--- a/scss/_history.scss
+++ b/scss/_history.scss
@@ -7,11 +7,8 @@
             height: 100%;
             margin-bottom: 1em;
                 .titulo-habitaciones {
-                    color: white;
-                    font-size: 2rem;
+                    @include titulo (2rem, 700,center,white);
                     text-transform: uppercase;
-                    text-align: center;
-                    font-weight: 700;
                     margin: 1em 0px 1em 0px;
                 }
                 .album {
@@ -22,10 +19,8 @@
                                     background-color: rgba(0, 0, 0, 0.578);
                                         .card-body {
                                             .titulo-foto {
-                                                color: white;
-                                                font-size: 1em;
+                                                @include titulo (1em,650,start,white);
                                                 text-transform: uppercase;
-                                                font-weight: 650;
                                             }
                                             .card-text {
                                                 color: white;
