--- a/scss/_reserva.scss
+++ b/scss/_reserva.scss
@@ -18,17 +18,12 @@
                     align-items: center;
                     
                         h1{
-                            text-align: center;
+                            @include titulo (2em, 700, center, white);
                             text-transform: uppercase;
-                            font-weight: 700;
-                            color: white;
                         }
                         h2 {
-                            text-align: center;
+                            @include titulo (1.5em,700,center,white);
                             text-transform: uppercase;
-                            font-weight: 700;
-                            font-size: 1.5em;
-                            color: white;
                         }
                         form {
                             width: 80%;
