--- a/scss/_ubicacion.scss
+++ b/scss/_ubicacion.scss
@@ -14,10 +14,8 @@
                 p {
                     text-transform: uppercase;
                     width: 60%;
-                    text-align: center;
-                    font-size: 25px;
+                    @include titulo (1.5em,500,center,white);
                     font-family: 'Oswald', sans-serif;
-                    color: white;
                 }
         }
 
