--- a/styles/style.css
+++ b/styles/style.css
@@ -122,8 +122,9 @@ html body {
   height: 100%;
 }
 .body-index .main-index .actividades h3 {
-  text-align: center;
+  font-size: 2em;
   font-weight: 700;
+  text-align: center;
   color: white;
   margin-top: 1em;
   text-transform: uppercase;
@@ -152,21 +153,22 @@ html body {
   margin-bottom: 1em;
 }
 .main-history .habitaciones .titulo-habitaciones {
-  color: white;
   font-size: 2rem;
-  text-transform: uppercase;
-  text-align: center;
   font-weight: 700;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
   margin: 1em 0px 1em 0px;
 }
 .main-history .habitaciones .album .container .row .col .card {
   background-color: rgba(0, 0, 0, 0.578);
 }
 .main-history .habitaciones .album .container .row .col .card .card-body .titulo-foto {
-  color: white;
   font-size: 1em;
-  text-transform: uppercase;
   font-weight: 650;
+  text-align: start;
+  color: white;
+  text-transform: uppercase;
 }
 .main-history .habitaciones .album .container .row .col .card .card-body .card-text {
   color: white;
@@ -188,10 +190,11 @@ html body {
 .ubicacion .ubicacion-texto p {
   text-transform: uppercase;
   width: 60%;
+  font-size: 1.5em;
+  font-weight: 500;
   text-align: center;
-  font-size: 25px;
-  font-family: "Oswald", sans-serif;
   color: white;
+  font-family: "Oswald", sans-serif;
 }
 .ubicacion .mapa {
   width: 80%;
@@ -226,6 +229,9 @@ html body {
 }
 .form-contacto .caja-formulario .titulo-contacto {
   font-size: 2.5em;
+  font-weight: 500;
+  text-align: center;
+  color: white;
 }
 .form-contacto .caja-formulario .formulario {
   display: flex;
@@ -263,7 +269,9 @@ html body {
 }
 .form-contacto .redes h2 {
   font-size: 1.5em;
+  font-weight: 500;
   text-align: center;
+  color: white;
 }
 .form-contacto .redes a .icon {
   width: 80px;
@@ -292,17 +300,18 @@ html body {
   align-items: center;
 }
 .main-reserva .reserva .formulario-reserva h1 {
-  text-align: center;
-  text-transform: uppercase;
+  font-size: 2em;
   font-weight: 700;
+  text-align: center;
   color: white;
+  text-transform: uppercase;
 }
 .main-reserva .reserva .formulario-reserva h2 {
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 700;
   font-size: 1.5em;
+  font-weight: 700;
+  text-align: center;
   color: white;
+  text-transform: uppercase;
 }
 .main-reserva .reserva .formulario-reserva form {
   width: 80%;
@@ -425,6 +434,17 @@ footer .contenido-footer {
   .form-contacto .redes .icon {
     width: 40px;
     height: 40px;
+  }
+  /*modificacion a reserva*/
+  .body-reserva {
+    height: 200%;
+  }
+  .body-reserva .main-reserva {
+    height: 100%;
+  }
+  .body-reserva .main-reserva .reserva {
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.9fr 1.1fr;
   }
 }
 /*media para 576px*/
