--- a/styles/style.css
+++ b/styles/style.css
@@ -86,7 +86,7 @@ html body {
   height: 100%;
   width: 100%;
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 0.9fr 1fr;
   grid-template-areas: "pre" "act";
 }
 .body-index .main-index .presentacion {
@@ -477,6 +477,13 @@ footer .contenido-footer {
   /* modificacion a location */
   .ubicacion-texto p {
     font-size: 1em;
+  }
+  /*modificacion a contacto*/
+  .form-contacto .redes h2 {
+    font-size: 1em;
+    font-weight: 500;
+    text-align: center;
+    color: white;
   }
 }
 
