--- a/styles/style.css
+++ b/styles/style.css
@@ -485,6 +485,10 @@ footer .contenido-footer {
     text-align: center;
     color: white;
   }
+  .form-contacto .redes .icon {
+    height: 20px;
+    width: 20px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
