--- a/styles/style.css
+++ b/styles/style.css
@@ -431,7 +431,7 @@ footer .contenido-footer {
     height: 20%;
     width: 80%;
   }
-  .form-contacto .redes .icon {
+  .form-contacto .redes a .icon {
     width: 40px;
     height: 40px;
   }
@@ -485,7 +485,7 @@ footer .contenido-footer {
     text-align: center;
     color: white;
   }
-  .form-contacto .redes .icon {
+  .form-contacto .redes a .icon {
     height: 20px;
     width: 20px;
   }
