agregue de todo xd

--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -38,3 +38,21 @@ html {
         overflow-x: hidden;
     }
 }
+
+.noValid {
+    border: solid 1.5px red;
+    animation: error 0.5s; 
+}
+
+@keyframes error {
+    0% {transform: translate(0,0);}
+    10%, 30%, 50%, 70%, 90% {
+        transform: translate(-5px,0);
+    }
+    20%, 40%, 60%, 80% {
+        transform: translate(5px,0);
+    }
+    100% {
+        transform: translate(0,0);
+    }
+}
