--- a/scss/_reserva.scss
+++ b/scss/_reserva.scss
@@ -25,7 +25,7 @@
                             @include titulo (1.5em,700,center,white);
                             text-transform: uppercase;
                         }
-                        form {
+                        .form {
                             width: 80%;
                             height: 70%;
                             display: flex;
@@ -41,17 +41,65 @@
                                 width: 90%;
                                 margin-bottom: 0.5em;
                             }
+                            .btn-reserva {
+                                width: 90%;
+                            }
                         }
                 }
-                .calendario {
-                    width: 100%;
-                    height: 100%;
-                    display: flex;
-                    justify-content: center;
+                .datos-reserva {
+                    width: 80%;
+                    height: 90%;
+                    background-color:rgba(0, 0, 0, 0.47);
+                    border-radius: 5%;
+                    display: grid;
+                    grid-template-rows: 1fr 2fr 0.5fr 0.5fr;
                     align-items: center;
-                        iframe {
+                    justify-items: center;
+                        h2 {
+                            text-align: center;
+                            color: white;
+                            text-transform: uppercase;
+                            font-weight: 700;
+                            width: 100%;
+                        }
+                        .listaReservas {
+                            list-style: none;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            gap: 0.5em;
+                            height: 80%;
                             width: 90%;
-                            height: 90%;
+                            padding: 0;
+                            margin: 0;
+                                .datoReserva {
+                                    color: white;
+                                    font-size: 1.5em;
+                                    font-weight: 600;
+                                }
+                        }
+                        .botonesReservas {
+                            width: 90%;
+                            gap: 1em;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                                .eliminarReserva {
+                                    width: 100%;
+                                    background-color: rgba(169, 4, 4, 0.826);
+                                    text-transform: uppercase;
+                                    font-weight: 600;
+                                }
+                                .confirmarReserva {
+                                    width: 100%;
+                                    background-color: rgba(0, 226, 0, 0.724);
+                                    text-transform: uppercase;
+                                    font-weight: 600;
+                                }
+                        }
+                        .total {
+                            color: white;
                         }
                 }
         }
