creacion menu inicio de sesion

--- a/styles/style.css
+++ b/styles/style.css
@@ -409,6 +409,53 @@ html body {
   color: white;
 }
 
+.bodySesion {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bodySesion .formInicioSesion {
+  width: 40%;
+  height: 70%;
+  background-color: rgba(0, 0, 0, 0.502);
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.bodySesion .formInicioSesion p {
+  font-weight: 700;
+  color: white;
+}
+.bodySesion .formInicioSesion input {
+  width: 80%;
+  height: 8%;
+}
+.bodySesion .formRegistro {
+  width: 40%;
+  height: 70%;
+  background-color: rgba(0, 0, 0, 0.502);
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.bodySesion .formRegistro p {
+  font-weight: 700;
+  color: white;
+}
+.bodySesion .formRegistro input {
+  width: 80%;
+  height: 8%;
+}
+.bodySesion .formActivo {
+  display: flex;
+}
+
 /* footer */
 footer {
   display: flex;
